# Venturi

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  compile.sh  imgui.ini
shaders/: fade.frag  fade.frag.spv  fade.spv  fade.vert  frag.spv  grid.frag  grid.frag.spv  grid.vert.spv  quad.vert  shader.frag  shader.vert  vert.spv
src/: canvas.cpp  canvas.h  config.h  main.cpp  simulation.cpp  simulation.cu  simulation.h  types.h  utils.h
src/canvas/: canvas.cpp  canvas.h  offline_canvas.cpp  offline_canvas.h  realtime_canvas.cpp  realtime_canvas.h
src/kernels/: common.cu  common.cuh  init.cu  launchers.h  simulation.cu
src/utils/: simple_plotter.h
tests/benchmark/: benchmark_boundaries.cpp  benchmark_density_evolution.cpp  benchmark_init.cpp  benchmark_local_density.cpp  benchmark_simulation.cpp  benchmark_simulation_step.cpp  benchmark_spatial_hashing.cpp  benchmark_speed_pressure.cpp
tests/common/: benchmark_common.h  test_common.h
tests/fixtures/: simulation_benchmark_fixture.cpp  simulation_benchmark_fixture.h  simulation_fixture.cpp  simulation_fixture.h
tests/profile/: determine_max_agents.cpp  profile_simulation.cpp
tests/unit/: test_init.cpp  test_local_density.cpp  test_simulation.cpp  test_spatial.cpp  test_speed_pressure.cpp  test_update_logic.cpp
